crates/check_cli/tests/snapshots/main_commands_lint/should_not_disable_recommended_rules_for_a_group.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `check.json`

```json
{
  "assist": {
    "enabled": false
  },
  "linter": {
    "enabled": true,
    "rules": {
      "recommended": true,
      "complexity": {
        "noUselessSwitchCase": "off"
      }
    }
  }
}
```

## `fix.js`

```js
const array = ["split", "the text", "into words"];
// next line should error because of the recommended rule
array.map((sentence) => sentence.split(" ")).flat();
		
```

# Emitted Messages

```block
fix.js:3:1 lint/complexity/useFlatMap  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The call chain .map().flat() can be replaced with a single .flatMap() call.
  
    1 │ const array = ["split", "the text", "into words"];
    2 │ // next line should error because of the recommended rule
  > 3 │ array.map((sentence) => sentence.split(" ")).flat();
      │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    4 │ 		
  
  i Safe fix: Replace the chain with .flatMap().
  
    1 1 │   const array = ["split", "the text", "into words"];
    2 2 │   // next line should error because of the recommended rule
    3   │ - array.map((sentence)·=>·sentence.split("·")).flat();
      3 │ + array.flatMap((sentence)·=>·sentence.split("·"));
    4 4 │   		
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
```
