crates/check_cli/tests/snapshots/main_commands_lint/should_only_processes_changed_files_when_changed_flag_is_set.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `file.js`

```js
console.log('file');
```

## `file2.js`

```js
console.log('file2');
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
