crates/check_cli/tests/snapshots/main_commands_lint/should_only_processes_staged_files_when_staged_flag_is_set.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `changed.js`

```js
console.log('changed');
```

## `file2.js`

```js
console.log('file2');
```

## `staged.js`

```js
console.log('staged');
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
