crates/check_cli/tests/snapshots/main_commands_lint/should_process_changed_files_if_changed_flag_is_set_and_default_branch_is_configured.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `check.json`

```json
{
  "vcs": {
    "defaultBranch": "main"
  }
}
```

## `file.js`

```js
console.log('file');
```

## `file2.js`

```js
console.log('file2');
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
